[tool.poetry]
name = "currencyconversion"
version = "0.1.0"
description = ""
authors = ["Saveliy <s.lekhtin@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.22"
black = "^23.10.1"
isort = "^5.12.0"
asyncpg = "^0.28.0"
greenlet = "^3.0.0"
aiohttp = "^3.8.6"

[tool.black]
line-length = 120 # Maximum line length

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
